--- a/crates/lidar_satellite/Cargo.toml
+++ b/crates/lidar_satellite/Cargo.toml
@@ -9,4 +9,4 @@ edition = "2021"
 serde = {version = "1.0", features = ["derive"] }
 serde_yaml = "0.9"
 lidar_common = { path = "../lidar_common" }
-rocket = "0.5.0-rc.2"
+rocket = {version = "0.5.0-rc.2", features = ["mtls"] }
