Updating configs to reflect best known GPS coordinates for sensors.

--- a/configs/artemisia.yaml
+++ b/configs/artemisia.yaml
@@ -4,17 +4,19 @@ controller_address: "192.168.1.42"
 sensors:
   - lidar_type: "VelodyneVLP32C"
     gps:
-      latitude: 39.0
-      longitude: -119.0
+      latitude: 39.538567
+      longitude: -119.817063
     address: "172.20.133.50"
     port: 2380
     frame_id: "virginia_artemisia_sw"
     namespace: "virginia_artemisia_sw"
+    running: true
   - lidar_type: "VelodyneVLP32C"
     gps:
-      latitude: 39.0
-      longitude: -119.0
+      latitude: 39.538695
+      longitude: -119.816968
     address: "172.20.133.51"
     port: 2390
     frame_id: "virginia_artemisia_ne"
     namespace: "virginia_artemisia_ne"
+    running: true
