--- a/configs/fifth.yaml
+++ b/configs/fifth.yaml
@@ -4,12 +4,13 @@ controller_address: "192.168.1.42"
 sensors:
   - lidar_type: "VelodyneVLP32C"
     gps:
-      latitude: 39.0
-      longitude: -119.0
+      latitude: 39.531052
+      longitude: -119.814615
     address: "172.20.133.170"
     port: 2480
     frame_id: "virginia_5th_sw"
     namespace: "virginia_5th_sw"
+    running: true
   - lidar_type: "VelodyneVLP32C"
     gps:
       latitude: 39.0
@@ -18,3 +19,4 @@ sensors:
     port: 2490
     frame_id: "virginia_15th_se"
     namespace: "virginia_15th_se"
+    running: false
