--- a/configs/college.yaml
+++ b/configs/college.yaml
@@ -4,17 +4,19 @@ controller_address: "192.168.1.42"
 sensors:
   - lidar_type: "VelodyneVLP32C"
     gps:
-      latitude: 39.0
-      longitude: -119.0
+      latitude: 39.540503
+      longitude: -119.817272
     address: "172.20.133.30"
     port: 2340
-    frame_id: "virginia_college_0"
-    namespace: "virginia_college_0"
+    frame_id: "virginia_college_se"
+    namespace: "virginia_college_se"
+    running: true
   - lidar_type: "VelodyneVLP32C"
     gps:
-      latitude: 39.0
-      longitude: -119.0
+      latitude: 39.540708
+      longitude: -119.816908
     address: "172.20.133.31"
     port: 2350
-    frame_id: "virginia_college_1"
-    namespace: "virginia_college_1"
+    frame_id: "virginia_college_ne"
+    namespace: "virginia_college_ne"
+    running: true
