--- a/configs/fourth.yaml
+++ b/configs/fourth.yaml
@@ -4,17 +4,19 @@ controller_address: "192.168.1.42"
 sensors:
   - lidar_type: "VelodyneVLP32C"
     gps:
-      latitude: 39.0
-      longitude: -119.0
+      latitude: 39.529745
+      longitude: -119.814280
     address: "172.20.133.190"
     port: 2500
     frame_id: "virginia_4th_sw"
     namespace: "virginia_4th_sw"
+    running: true
   - lidar_type: "VelodyneVLP32C"
     gps:
-      latitude: 39.0
-      longitude: -119.0
+      latitude: 39.529958
+      longitude: -119.814305
     address: "172.20.133.191"
     port: 2510
     frame_id: "virginia_4th_ne"
     namespace: "virginia_4th_ne"
+    running: true
